--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy::Token": "npx hardhat run scripts/deploy/deployToken.js --network",
     "verify::Airdrop": "npx hardhat run scripts/verify/Airdrop.js --network",
     "verify::NFT": "npx hardhat run scripts/verify/NFT.js --network",
-    "verify::Token": "npx hardhat run scripts/verify/Token.js --network"
+    "verify::Token": "npx hardhat run scripts/verify/Token.js --network",
+    "approve:Token": "npx hardhat run scripts/interact/approveAllowance.js --network"
   },
   "author": "",
   "license": "ISC",
